--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <h1>Tic Tac Toe</h1>
 
     <div id="content"></div>
+
+    <div class="center mt-32">
+        <button onclick="restartGame()">Spiel neu starten</button>
+    </div>
     
 </body>
 </html>
